Bug 125397 - iOS App: Template URL - Crash when Opening From Template
Summary: iOS App: Template URL - Crash when Opening From Template
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-20 15:35 UTC by Andreas Gruhler
Modified: 2019-05-20 23:46 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Gruhler 2019-05-20 15:35:09 UTC
Description:
The Collabora iOS App (0.1 v34) crashes when opening a file from template. In the settings, the following template URLs can be used to reproduce the problem:
* https://nicu.winebarrel.ch/tpl_de_ch/00_index.txt
* https://tpl.dev.base4kids2.ch/00_index.txt
* https://in0rdr.github.io/lool-tpl-test/00_index.txt

Steps to Reproduce:
1. Use one of the template urls listed above, add them in the iOS Settings for Collabora
2. Open Collabora
3. Create new document from a template

Actual Results:
1. The url is configured in the settings
2. Collabora opens
3. The templates are listed, but the App crashes when selecting a template

Expected Results:
1. The url is configured in the settings
2. Collabora opens
3. The templates are listed, the App should not crash when selecting a template but open a new file from the template


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Aron Budea 2019-05-20 15:59:35 UTC
I can reproduce this without a template link, too, does that occur for you?
Comment 2 How can I remove my account? 2019-05-20 16:13:13 UTC
Can reproduce, will fix.
Comment 3 Commit Notification 2019-05-20 23:45:20 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/123c7b80447a2b433e19d0d04be444c4dfdd0551%5E%21

tdf#125397: Fixes for threads and SolarMutex on iOS

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2019-05-20 23:45:36 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/6d6277f23337c8eae9acabdf830e33fcc3ee9923%5E%21

tdf#125397: Avoid crash if GetpApp() returns null, can happen on iOS at least

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 How can I remove my account? 2019-05-20 23:46:33 UTC
Fixed now, I hope. Build 0.1(35) includes the fixes.