toolkit/source/awt/vclxtoolkit.cxx
@@ -835,6 +835,8 @@ bool lcl_convertMessageBoxType(
     return ( eVal != css::awt::MessageBoxType::MessageBoxType_MAKE_FIXED_SIZE );
 }
 
+#ifndef IOS
+
 static sal_Int32                            nVCLToolkitInstanceCount = 0;
 static bool                                 bInitedByVCLToolkit = false;
 
@@ -905,6 +907,8 @@ static void ToolkitWorkerFunction( void* pArgs )
 }
 }
 
+#endif
+
 // constructor, which might initialize VCL
 VCLXToolkit::VCLXToolkit():
     cppu::WeakComponentImplHelper<
@@ -922,6 +926,7 @@ VCLXToolkit::VCLXToolkit():
     hSvToolsLib = nullptr;
     fnSvtCreateWindow = nullptr;
 
+#ifndef IOS
     osl::Guard< osl::Mutex > aGuard( getInitMutex() );
     nVCLToolkitInstanceCount++;
     if( ( nVCLToolkitInstanceCount == 1 ) && ( !Application::IsInMain() ) )
@@ -930,6 +935,7 @@ VCLXToolkit::VCLXToolkit():
         CreateMainLoopThread( ToolkitWorkerFunction, this );
         getInitCondition().wait();
     }
+#endif
 }
 
 void SAL_CALL VCLXToolkit::disposing()
@@ -943,6 +949,7 @@ void SAL_CALL VCLXToolkit::disposing()
     }
 #endif
 
+#ifndef IOS
     {
         osl::Guard< osl::Mutex > aGuard( getInitMutex() );
         if( --nVCLToolkitInstanceCount == 0 )
@@ -955,7 +962,7 @@ void SAL_CALL VCLXToolkit::disposing()
             }
         }
     }
-
+#endif
     if (m_bEventListener)
     {
         ::Application::RemoveEventListener(m_aEventListenerLink);
